--- a/css/style.CSS
+++ b/css/style.CSS
@@ -2,11 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Oswald:wght@700&family=Roboto:ital,wght@0,400;1,100;1,400;1,700&display=swap');
 
 
-/* 
-font-family: 'Roboto', sans-serif;
-font-family: 'Sigmar', cursive; 
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -14,33 +9,98 @@ font-family: 'Sigmar', cursive;
     font-family: 'Oswald', sans-serif;
 }
 
-/* @font-face {
-    font-family: 'Roboto';
-    src: url('../assets/Roboto-Medium.ttf');
-} */
-
-.menu-navegador {
-    background-color: #000000;
-    position: fixed;
-    width: 100%;
-    z-index:100;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    
+body {
+    height: 100vh;
+    background-color: #ffffff;
 }
+
+/* BARRA DE NAVEGACIÓN */
+
+
+.navbar {
+    background-color: #000000;
+
+}
+
+.navbar a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    text-transform: uppercase;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+
+}
+
+.navbar ul li {
+
+    padding: 20px;
+}
+
+.navbar a:hover {
+    color: #6fff8d;
+}
+
+
+.navbar a img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 100%;
+    display: flex;
+    margin-left: 150px;
+
+}
+
+
+
+.navbar .links {
+    display: flex;
+    gap: 2rem;
+
+}
+
+/* 1ERA PARTE: CARRUSEL*/
+.action_btn {
+    background-color: #ffffff;
+    color: #000000;
+    padding: 0.5rem 1rem;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    font-size: 0.8rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: scale 0.2 ease;
+
+}
+
+.action_btn:hover {
+    scale: 1.05;
+    color: #000000;
+    background-color: #6fff8d;
+}
+
+.action_btn:active {
+    scale: 0.95;
+
+}
+
 
 .home {
     height: 100vh;
     display: flex;
     align-items: center;
     padding: 0 10%;
+
 }
 
-.home-content{
+.home-content {
     max-width: 600px;
+
 }
 
 .home-content h1 {
@@ -60,7 +120,7 @@ font-family: 'Sigmar', cursive;
     justify-content: space-between;
     width: 345px;
     height: 50px;
-    
+
 }
 
 .btn-box a {
@@ -72,7 +132,7 @@ font-family: 'Sigmar', cursive;
     height: 100%;
     background: #000000;
     border: 2px solid #000000;
-    border-radius:  8px;
+    border-radius: 8px;
     font-size: 19px;
     color: #ffffff;
     text-decoration: none;
@@ -86,8 +146,6 @@ font-family: 'Sigmar', cursive;
 
 .btn-box a:hover {
     color: #000000;
-
-
 }
 
 .btn-box a:nth-child(2) {
@@ -101,10 +159,7 @@ font-family: 'Sigmar', cursive;
 
 
 .btn-box a:nth-child(2)::before {
-
     color: #000000ee;
-
-
 }
 
 
@@ -117,9 +172,9 @@ font-family: 'Sigmar', cursive;
     position: absolute;
     top: 0;
     left: 0;
-    width:0%;
+    width: 0%;
     height: 100%;
-    background:#6fff8d;
+    background: #6fff8d;
     z-index: -1;
     transition: .5s;
 
@@ -131,209 +186,7 @@ font-family: 'Sigmar', cursive;
 
 
 
-
-
-.grilla {
-    border: 3px solid red;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    /*repeat(canditad  de columnas, tamaño de ellas)*/
-    grid-template-rows: repeat(3, 300px);
-    grid-template-areas:
-        'area4 area4 area4 area4'
-        'area2 area1 area3 area5'
-        'area2 none area6 area7'
-    ;
-    gap: 15px;
-    padding: 15px;
-    align-items: center;
-    justify-items: center;
-    place-items: center;
-}
-
-.g3 {
-    grid-area: area3;
-    background-color: rgb(174, 70, 63);
-}
-
-.g4 {
-    grid-area: area4;
-    background-color: rgb(182, 75, 182);
-}
-
-.g5 {
-    grid-area: area5;
-    background-color: rgb(182, 75, 182);
-}
-
-.g7 {
-    grid-area: area7;
-    background-color: rgb(182, 75, 182);
-}
-
-.g6 {
-    grid-area: area6;
-    background-color: rgb(182, 75, 182);
-}
-
-.g8 {
-    grid-area: area8;
-    background-color: rgb(182, 75, 182);
-}
-
-.grilla__hijo {
-    width: 100%;
-    height: 100%;
-    background-color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #eeee;
-    border: 3px solid #6fff8d;
-
-
-}
-
-.grilla__hijo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    
-}
-
-.grilla__hijo a {
-    width: 100%;
-    height: 100%;
-}
-
-.grilla__hijo p {
-    font-size: 60px;
-}
-
-
-
-.g2 img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-}
-
-
-.g2 {
-    grid-area: area2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 10px;
-}
-
-.grilla__hijo__card {
-    padding: 20px;
-    font-size: 30px;
-}
-
-.grilla__hijo__card p {
-    font-size: 24px;
-}
-
-
-.menu-navegador a img {
-    width: 100px;
-    height: 100px;
-    margin-right: 690px;
-    margin-left: -160px;
-    border-radius: 100%;
-}
-.menu-navegador ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.menu-navegador ul li {
-    padding: 30px;
-}
-
-.menu-navegador ul li a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-size: 16px;
-    text-transform: uppercase;
-}
-
-
-.titulo {
-    color: rgb(0, 0, 0);
-    text-align: center;
-    font-size: 24px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 900;
-
-}
-
-p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    text-align: justify;
-}
-
-.fondo {
-    background-color: rgb(0, 0, 0);
-    background-position: center;
-    background-repeat:repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.grilla__hijo g8  {
-    background-color: #d33232;
-
-}
-
-
-.cajas {
-    background-color: #ffffff;
-    color: #eeee;
-    /* height: 100px;
-    width: 100px; */
-
-    /* padding */
-    /* padding-top: 30px;
-    padding-right: 130px;
-    padding-bottom: 50px;
-    padding-left: 70px; */
-    padding: 60px 30px;
-
-    /* margin */
-    /* margin-bottom: 50px;
-    margin-top: 30px;
-    margin-right: 130px;
-    margin-left: 70px; */
-    margin: 0px;
-
-    /* border */
-    /* border-top: 0px solid red;
-    border-right: 10px dashed blue;
-    border-bottom: 10px inset rgb(60, 255, 0);
-    border-left: 10px outset rgb(255, 230, 0); */
-
-    /* border-radius: 100%; */
-}
-
-.caja-img {
-    width: 100%;
-    height: 100%;
-    margin: 50px;
-    border-radius: 30px;
-}
-
-.caja-img img {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 100%;
-}
-
+/* 2DA PARTE: 3 CAJAS*/
 
 .cards {
     background-color: #000000ee;
@@ -345,11 +198,11 @@ p {
     width: 100%;
     height: 400px;
     object-fit: cover;
-    color: #ffffff;
+    color: #000000;
 }
 
 .card_body {
-    
+
     display: inline-block;
     width: 30%;
     text-align: center;
@@ -359,50 +212,140 @@ p {
     position: relative;
 }
 
-.card_body h2, .card_body p {
+.card_body h2,
+.card_body p {
     padding: 14px;
-    color:#000000
+    color: #000000
 }
 
 
 
-/* flex */
+/* 3RA PARTE: EMPIEZA CON UNA IDEA*/
 .cajas {
     padding: 0px 0;
     margin-top: 60px;
     margin-bottom: 70px;
-    /* flex-direction:column;
-    flex-wrap: wrap; */
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
     gap: 0px;
-    
-    
+
+
 }
 
+.caja-img {
+    width: 100%;
+    height: 100%;
+    margin: 50px;
+    border-radius: 100px;
+}
 
-/* pseudoclases */
-
-/* .pseudo:hover{
-    background-color: #f2786a;
+.caja-img img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
     border-radius: 100%;
-    width: 350px;
-    height: 350px;
 }
-.pseudo:hover p {
-    color: #191919;
-    font-size: 30px;
-} */
-/* .pseudo p:hover{
-    color: #191919;
-    font-size: 30px;
-} */
-/* 
-.pseudo:first-child , .pseudo:last-child{
-    background-color: rgb(33, 126, 126);
-    color: #191919;
-} */
+
+
+
+.caja {
+    background-color: #fffdfd;
+    width: 100%;
+    gap: 50px;
+
+}
+
+.caja img {
+    margin-top: 0px;
+    width: 100%;
+    height: 900px;
+    object-fit: cover;
+}
+
+.caja h2,
+.caja p {
+    padding: 0px;
+    text-align: center;
+    color: #000000ee;
+    margin-bottom: 50px;
+}
+
+/* 4TA PARTE: ASTRONAUTA*/
+
+.c4 {
+    background-color: #ffffff;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.c4 img {
+    width: 50%;
+    height: 100%;
+    margin-top: 80px;
+}
+
+.btn-abajo a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    background: #000000;
+    border: 2px solid #000000;
+    border-radius: 8px;
+    font-size: 19px;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.btn-abajo a:hover {
+    color: #000000;
+}
+
+.btn-abajo a:nth-child(2) {
+    background: #000000;
+    color: #ffffff;
+}
+
+.btn-abajo a:nth-child(2):hover {
+    color: #000000;
+}
+
+.btn-abajo a:nth-child(2)::before {
+    color: #000000ee;
+}
+
+.btn-abajo a:nth-child(2) ::before {
+    background-color: #6fff8d;
+}
+
+.btn-abajo a:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background: #6fff8d;
+    z-index: -1;
+    transition: .5s;
+}
+
+.btn-abajo a:hover:before {
+    width: 100%;
+}
+
+
+/* PORTAFOLIO*/
 
 .pseudos {
     display: flex;
@@ -420,16 +363,21 @@ p {
 .pseudo {
     width: 90%;
     height: 600px;
-    background-color: #6fff8d;
+    background-color: #000000;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    color: #000000;
+    color: #ffeeee;
     transition: .5s;
     overflow: hidden;
 }
 
+.pseudo:hover {
+    background-color: #ffffff;
+    box-shadow: 5px 5px 15px 0px #4a4a4a;
+    color: #000000;
+}
 
 .pseudo img {
     width: 40%;
@@ -439,118 +387,215 @@ p {
     transition: .3s;
 }
 
-.pseudo__container {
-    padding: 50px;
-    width: 50%;
-}
-
-.pseudo__circle {
-    width: 100px;
-    height: 100px;
-    background-color: aqua;
-    transition: .5s;
-}
-
-.pseudo:hover {
-    background-color: #ffffff;
-    box-shadow: 5px 5px 15px 0px #4a4a4a;
-}
-
-.pseudo:hover .pseudo__circle {
-    background-color: rgb(203, 66, 66);
-    border-radius: 100%;
-    position: absolute;
-    top: 20px;
-    left: 30px;
-}
-
 .pseudo:hover img {
     filter: blur(0);
     width: 50%;
     height: 900px;
 }
 
+.pseudo__container {
+    padding: 50px;
+    width: 50%;
+}
+
 .pseudo:nth-child(odd) {
-    background-color: rgb(4, 34, 34);
-    color: #eeee;
+    background-color: rgb(255, 255, 255);
+    color: #000000ee;
     flex-direction: row-reverse;
 }
 
 .pseudo:nth-child(odd):hover {
-    background-color: #df806b;
+    background-color: #6fff8d;
     box-shadow: 5px 5px 15px 0px #4a4a4a;
 }
 
-.hero__left a {
-    min-width: 170px;
-    max-width: 50%;
-    font-size: 20px;
+.number-page {
+    text-align: center;
+    width: 100%;
+    height: 5%;
+    background-color: #000000;
+}
+
+.number-page ul li {
+    display: inline-block;
+    width: 50px;
+    margin-top: 8px;
+
+}
+
+.number-page ul li a {
+    text-decoration: none;
+    color: #ffffff;
     font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.number-page ul li a:hover {
+    background-color: #ffeeee;
+    color: #000000;
+}
+
+
+/* CONTACTO*/
+
+.container {
+    max-width: 1500px;
+    margin: 0 auto;
+}
+
+
+.form-section form {
+    width: 40%;
+    margin: 40px auto;
+    float: left;
     text-align: center;
-    padding: 20px;
 }
 
-.hero__left__users {
-    display: flex;
-    align-items: center;
-    height: 90px;
-    margin: 10px;
+.form-section form p {
+    font-size: 20px;
+    color: #000000
 }
 
-.hero__left__users img {
-    width: 70px;
-    height: 70px;
-    object-fit: cover;
-    border: 2px solid #eeee;
-    border-radius: 100%;
-    margin: -10px;
-}
-.caja {
-    background-color: #fffdfd;
+.form-section form p label {
+    display: block;
     width: 100%;
-    gap: 50px;
-    
+    text-align: start;
+    transform: translateX(25%);
+    margin: 8px auto;
+
 }
 
-.caja img {
-    margin-top: 0px;
-    width: 100%;
-    height: 900px;
-    object-fit: cover;
-}
-
-.caja h2, .caja p {
-    padding: 0px;
-    text-align: center;
+.form-section form p button {
+    background-color: #6fff8d;
+    margin-left: 300px;
+    margin-top: 50px;
+    text-decoration: none;
     color: #000000ee;
-    margin-bottom: 50px;
+    padding: 10px;
+    border-radius: 7px;
+    align-self: flex-end;
+    width: 150px;
+    text-align: center;
 }
 
-
-.c4 {
-    background-color: #ffffff;
-    width: 100%;
-    display: flex;
-    align-items: center;
+.form-section form p button {
+    position: relative;
+    display: inline-flex;
     justify-content: center;
-    flex-wrap: wrap;
-}
-
-.c4 img {
-    width: 50%;
+    align-items: center;
+    width: 150px;
     height: 100%;
-    margin-top: 80px;
+    background: #000000;
+    border: 2px solid #000000;
+    border-radius: 8px;
+    font-size: 19px;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+
 }
 
+.form-section form p button:hover {
+    color: #000000;
+
+
+}
+
+.form-section form p button:nth-child(2) {
+    background: #000000;
+    color: #ffffff;
+}
+
+.form-section form p button:nth-child(2):hover {
+    color: #000000;
+}
+
+.form-section form p button:nth-child(2)::before {
+    color: #000000ee;
+}
+
+.form-section form p button:nth-child(2) ::before {
+    background-color: #6fff8d;
+}
+
+.form-section form p button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background: #6fff8d;
+    z-index: -1;
+    transition: .5s;
+}
+
+.form-section form p button:hover:before {
+    width: 100%;
+}
+
+
+.form-section form p input,
+.form-section form p textarea {
+    display: block;
+    width: 50%;
+    text-align: start;
+    transform: translateX(50%);
+    border: 100;
+}
+
+
+.form-section form h3 {
+    color: #000000;
+    font-size: 24px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-right: 70px;
+}
+
+.form-section img {
+    width: 560px;
+    height: 560px;
+    margin: 40px auto;
+    object-fit: fill;
+    display: inline-block;
+    margin-left: 300px;
+    margin-top: 60px;
+}
+
+
+/*location*/
+
+.section-location {
+    display: inline-block;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+}
+
+.location-map {
+    float: center;
+    display: flex;
+
+}
+
+
+
+/*BLOG*/
 
 .caja_content {
-    
+
     width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
-    
+
+
 }
 
 .caja_content a {
@@ -567,94 +612,6 @@ p {
     text-align: center;
 }
 
-
-
-
-.container {
-    max-width: 1500px;
-    margin: 0 auto;
-}
-
-
-
-.form-section form{
-    width: 40%;
-    margin: 40px auto;
-    float: left;
-    text-align: center;
-}
-
-.form-section form p{
-    font-size: 40px;
-    color:#000000
-}
-
-.form-section form p label{
-    display: block;
-    width: 100%;
-    text-align: start;
-    transform: translateX(25%);
-    margin: 8px auto;
-
-}
-
-.form-section form p button{
-    background-color: #6fff8d;
-    margin-left: 300px;
-    margin-top: 50px;
-    text-decoration: none;
-    color: #000000ee;
-    padding: 10px;
-    border-radius: 7px;
-    align-self: flex-end;
-    width: 150px;
-    text-align: center;
-}
-
-.form-section form p input, .form-section form p textarea{
-    display: block;
-    width: 50%;
-    text-align: start;
-    transform: translateX(50%);
-    border: 100;
-
-    
-}
-
-
-.form-section form h3{
-    color: #000000;
-    font-size: 24px;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    margin-right: 70px;
-}
-
-.form-section img{
-    width: 560px;
-    height: 560px;
-    margin: 40px auto;
-    object-fit: fill;
-    display: inline-block;
-    margin-left: 300px;
-    margin-top: 60px;
-}
-
-
-/*location*/
-
-.section-location{
-    display: inline-block;
-    width: 100%;
-    margin: auto;
-    text-align: center;
-}
-
-.location-map{
-   float: center;
-   display: flex;
-
-}
 
 
 /*Footer*/
@@ -683,6 +640,7 @@ p {
     width: 25%;
     padding: 0 15px;
 }
+
 .footer-links ul li a {
     font-size: 18px;
     text-decoration: none;
@@ -693,17 +651,16 @@ p {
 }
 
 .footer-links ul li a:hover {
-    color:#ffffff;
+    color: #ffffff;
     padding-left: 6px;
 }
 
 .social-links {
-    
+
     bottom: 40px;
     width: 170px;
     display: flex;
     justify-content: space-between
-    
 }
 
 .social-links a {
@@ -718,14 +675,14 @@ p {
     border-radius: 50%;
     font-size: 30px;
     color: #000000;
-    text-decoration: none;  
+    text-decoration: none;
     z-index: 1;
-    overflow: hidden;  
+    overflow: hidden;
 }
 
 .social-links a::before {
     content: '';
-    position:absolute;
+    position: absolute;
     top: 0;
     left: 0;
     width: 0%;
