--- a/css/style.CSS
+++ b/css/style.CSS
@@ -14,6 +14,7 @@ body {
     background-color: #ffffff;
 }
 
+
 /* BARRA DE NAVEGACIÓN */
 
 
@@ -655,6 +656,7 @@ body {
     padding-left: 6px;
 }
 
+
 .social-links {
 
     bottom: 40px;
@@ -695,4 +697,14 @@ body {
 
 .social-links a:hover::before {
     width: 100%;
+}
+
+@media(max-width:991px){
+    .footer-columna{
+        text-align: center; 
+    }
+    .footer-links{
+        width: 100%;
+        margin-bottom: 30px;
+    }
 }
