--- a/css/style.CSS
+++ b/css/style.CSS
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Oswald:wght@700&family=Roboto:ital,wght@0,300;0,400;1,100;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Oswald:wght@700&family=Roboto:ital,wght@0,400;1,100;1,400;1,700&display=swap');
 
+:root{
+    --background-first: #F4EAD5;
+    --background-second: #FFFBE9;
+    --first-color: #CCD6A6;
+    --second-color: #DAE2B6;
+}
 
 * {
     margin: 0;
@@ -15,54 +21,7 @@ body {
 }
 
 
-/* BARRA DE NAVEGACIÓN */
 
-
-.navbar {
-    background-color: #000000;
-
-}
-
-.navbar a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-    text-transform: uppercase;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 10px;
-
-}
-
-.navbar ul li {
-
-    padding: 20px;
-}
-
-.navbar a:hover {
-    color: #6fff8d;
-}
-
-
-.navbar a img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 100%;
-    display: flex;
-    margin-left: 150px;
-
-}
-
-
-
-.navbar .links {
-    display: flex;
-    gap: 2rem;
-
-}
 
 /* 1ERA PARTE: CARRUSEL*/
 .action_btn {
@@ -95,24 +54,27 @@ body {
     height: 100vh;
     display: flex;
     align-items: center;
-    padding: 0 10%;
+    padding: 0% 5%;
 
 }
 
 .home-content {
     max-width: 600px;
+    
 
 }
 
 .home-content h1 {
-    font-size: 56px;
+    font-size: 50px;
     font-weight: 700;
     line-height: 1.2;
+    
+    
 
 }
 
 .home-content h3 {
-    font-size: 28px;
+    font-size: 25px;
     margin: 20px 0 40px;
 }
 
@@ -120,7 +82,7 @@ body {
     display: flex;
     justify-content: space-between;
     width: 345px;
-    height: 50px;
+    
 
 }
 
@@ -190,15 +152,20 @@ body {
 /* 2DA PARTE: 3 CAJAS*/
 
 .cards {
-    background-color: #000000ee;
-    padding: 50px 15px;
+    background-color: #6fff8d;
     text-align: center;
 }
 
 .card_body img {
     width: 100%;
-    height: 400px;
+    height: 30%px;
     object-fit: cover;
+    color: #000000;
+}
+
+.card_body img:hover{
+    background-color: #ffffff;
+    box-shadow: 5px 5px 15px 0px #4a4a4a;
     color: #000000;
 }
 
@@ -207,16 +174,22 @@ body {
     display: inline-block;
     width: 30%;
     text-align: center;
-    border-radius: 20px;
+    padding: 20px 20px 20px 20px;
     background-color: #6fff8d;
     margin-top: none;
     position: relative;
 }
-
+ 
 .card_body h2,
 .card_body p {
-    padding: 14px;
+    padding: 5%;
     color: #000000
+}
+
+.card_body h2:hover{
+    color: #F4EAD5;
+    background-color: #000000;
+    box-shadow: 5px 5px 15px 0px #4a4a4a;
 }
 
 
