--- a/css/style.CSS
+++ b/css/style.CSS
@@ -60,7 +60,7 @@ body {
 
 .home-content {
     max-width: 600px;
-    
+    margin: auto;    
 
 }
 
@@ -192,7 +192,38 @@ body {
     box-shadow: 5px 5px 15px 0px #4a4a4a;
 }
 
+.slider {
+    width: 75vw;
+    height: auto;
+    margin: auto;
+    overflow: hidden;
+}
 
+.slider .slide-track {
+    display: flex;
+    animation: scroll 40s linear infinite;
+    -webkit-animation: scroll 40s linear infinite;
+    width: calc(200px * 14);
+}
+
+.slider .slide {
+    width: 200px;
+}
+
+.slider .slide img {
+    width: 100%;
+}
+
+@keyframes scroll {
+    0% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+    100% {
+        -webkit-transform: translateX(calc(-200px * 7));
+        transform: translateX(calc(-200px * 7));
+    }
+}
 
 /* 3RA PARTE: EMPIEZA CON UNA IDEA*/
 .cajas {
