--- a/css/style.CSS
+++ b/css/style.CSS
@@ -52,7 +52,7 @@ body {
 
 .home-content {
     max-width: 600px;
-    height: auto; 
+    height: auto;
 
 }
 
@@ -60,21 +60,30 @@ body {
     font-size: 50px;
     font-weight: 700;
     line-height: 1.2;
-    
-    
+    text-align: left;
+    margin-right: 100px;
+
+
 
 }
 
+.card_body h2,
+.card_body p {
+    font-size: 20px;
+}
+
 .home-content h3 {
-    font-size: 25px;
+    font-size: 20px;
     margin: 20px 0 40px;
+    text-align: justify;
+    margin-right: 150px;
 }
 
 .home-content .btn-box {
     display: flex;
     justify-content: space-between;
     width: 345px;
-    
+
 
 }
 
@@ -159,7 +168,7 @@ body {
     color: #000000;
 }
 
-.card_body img:hover{
+.card_body img:hover {
     background-color: #ffffff;
     box-shadow: 5px 5px 15px 0px #4a4a4a;
     color: #000000;
@@ -175,14 +184,14 @@ body {
     margin-top: none;
     position: relative;
 }
- 
+
 .card_body h2,
 .card_body p {
     padding: 5%;
     color: #000000
 }
 
-.card_body h2:hover{
+.card_body h2:hover {
     color: #F4EAD5;
     background-color: #000000;
     box-shadow: 5px 5px 15px 0px #4a4a4a;
@@ -200,6 +209,10 @@ body {
     gap: 0px;
 
 
+}
+
+.caja c1 img {
+    align-items: center;
 }
 
 .caja-img {
@@ -313,6 +326,80 @@ body {
     width: 100%;
 }
 
+.caja_content {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+
+.caja_content h2 {
+    justify-content: center;
+    font-size: 50px;
+}
+
+.caja_content a {
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    background-color: #000000;
+    text-decoration: none;
+    color: #ffffffee;
+    border-radius: 7px;
+    align-self: flex-end;
+    width: 150px;
+    text-align: center;
+}
+
+
+/* ADN*/
+
+.cardsADN {
+    background-color: #6fff8d;
+    text-align: center;
+    margin-top: 20px;
+
+}
+
+.card_bodyADN img {
+    width: 100%;
+    height: 30%px;
+    object-fit: cover;
+    color: #000000;
+}
+
+.card_bodyADN img:hover {
+    background-color: #ffffff;
+    box-shadow: 5px 5px 15px 0px #4a4a4a;
+    color: #000000;
+}
+
+.card_bodyADN {
+
+    display: inline-block;
+    width: 30%;
+    text-align: center;
+    padding: 20px 20px 20px 20px;
+    background-color: #6fff8d;
+    margin-top: none;
+    position: relative;
+}
+
+.card_bodyADN h2,
+.card_bodyADN p {
+    padding: 5%;
+    color: #000000
+}
+
+.card_bodyADN h2:hover {
+    color: #F4EAD5;
+    background-color: #000000;
+    box-shadow: 5px 5px 15px 0px #4a4a4a;
+}
+
+
 
 /* PORTAFOLIO*/
 
@@ -423,17 +510,20 @@ body {
 
 .form-section form p {
     font-size: 20px;
-    color: #000000
+    color: #000000;
+    text-align: center;
+    align-items: center;
 }
 
 .form-section form p label {
-    display: block;
+    display: flex;
     width: 100%;
     text-align: start;
     transform: translateX(25%);
     margin: 8px auto;
 
 }
+
 
 .form-section form p button {
     background-color: #6fff8d;
@@ -599,23 +689,25 @@ body {
 .footer-links h4 {
     font-size: 30px;
     color: #000000;
+    text-decoration: none;
     margin-bottom: 25px;
     border-bottom: 2px solid #000000;
     padding-bottom: 10px;
-    display: inline-block;
+    display: block;
 }
 
 .footer-links {
     width: 25%;
     padding: 0 15px;
+
 }
 
 .footer-links ul li a {
     font-size: 18px;
     text-decoration: none;
     color: #000000;
-    display: block;
-    margin-bottom: 15px;
+    display: flex;
+    margin-bottom: auto;
     transition: all .3s ease;
 }
 
@@ -668,17 +760,150 @@ body {
     width: 100%;
 }
 
-@media(max-width:991px){
 
-    .home{
+
+
+
+
+
+@media(max-width:991px) {
+
+    .home {
         flex-direction: column;
     }
 
-    
-    .footer-columna{
-        text-align: center; 
+    .form-section form p input,
+    .form-section form p textarea {
+        width: 100%;
+
+        display: flex;
+        text-align: center;
+        margin-right: 100px;
+        margin-bottom: 40px;
+        transform: none;
     }
-    .footer-links{
+
+    .form-section form p button {
+        width: 80%;
+        display: flex;
+        margin: auto;
+    }
+
+    .form-section img {
+        display: block;
+        width: 560px;
+        height: 560px;
+        margin: 30px auto;
+        object-fit: fill;
+    }
+
+    .form-section form h3 {
+        font-size: 30px;
+        margin-right: 0px;
+        padding-top: 0px;
+    }
+
+    .form-section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card_bodyADN {
+        width: 100%;
+        padding: 0px 0px 0px;
+    }
+
+
+
+    .caja_content h2 {
+        font-size: 30px;
+        justify-content: center;
+    }
+
+    .home-content h3 {
+        text-align: center;
+        margin-right: 10px;
+
+    }
+
+    .card_body {
+        display: contents;
+    }
+
+    .home-content h1 {
+        text-align: center;
+        margin-right: 0px;
+        font-size: 60px;
+    }
+
+    .card_body h2,
+    .card_body p {
+        font-size: 0px;
+    }
+
+    .home-content h3 {
+        display: flex;
+    }
+
+    .form-section img {
+        object-fit: scale-down;
+        margin-top: 0px;
+        width: 100%;
+        height: 100%;
+        align-content: center;
+
+    }
+
+    .caja_content a {
+        position: static;
+    }
+
+    .caja h2 {
+        font-size: 20px;
+    }
+
+    .caja h3 {
+        font-size: 25px;
+
+    }
+
+    .caja img {
+        padding-bottom: 20px;
+        margin-bottom: 40px;
+    }
+
+    .card_body h2,
+    .card_body p {
+        padding: 5%;
+        color: #000000;
+        font-size: 40px;
+    }
+
+    .caja img {
+        object-fit: scale-down;
+        margin-top: 0px;
+        width: 100%;
+        height: 100%
+    }
+
+    .card_body img {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .footer {
+        padding: 50px 0;
+    }
+
+    .footer-links ul li a {
+        flex-direction: column;
+    }
+
+    .footer-columna {
+        text-align: center;
+    }
+
+    .footer-links {
         width: 100%;
         margin-bottom: 30px;
     }
